# CMakeList.txt : CMake project for Center World Engine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Center World Engine.cpp" "Center World Engine.h")

# TODO: Add tests and install targets if needed.
